--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+     <meta charset="UTF-8" />
+     <meta name="viewport" content="width=device-width,
+     intital-scale1=1">
+     <title>Portfolio</title>
+     <link rel="stylesheet" href="style.css" type="text/css">
+     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    </head>
+    <body>
+    <div class="top bar">
+        <span><ion-icon name="call-outline">+4553700233</ion-icon></span>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </div>
+    </body>
+
     
 </html>
