tilføjet logo til øverste header

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="top bar">
         <span><ion-icon name="call-outline">+4553700233</ion-icon></span>
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="#"></a><ion-icon name="logo-linkedin"></ion-icon></li>
+            <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
+            <li><a href="#"></a><ion-icon name="logo-instagram"></ion-icon></li>
         </ul>
     </div>
-    </body>
 
-    
+
+    </body>    
 </html>
