Tilføjet logo, samt links til de andre sider
Der er blevet tilføjet Logo, links til de andre sider til hoved navigationen

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         </ul>
     </div>
 
+    <nav>
+        <div class="logo"></div>
+            <img src="IMG\PB1.jpg" alt="logo">
+        <div class="toggle"></div>
+        <ul class="menu">
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
+
 
     </body>    
 </html>
