--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="logo"></div>
             <img src="IMG\PB1.jpg" alt="logo">
         <div class="toggle"></div>
+            <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
         <ul class="menu">
             <li><a href=""></a></li>
             <li><a href=""></a></li>
