--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
     <div class="top bar">
-        <span><ion-icon name="call-outline">+4553700233</ion-icon></span>
+        <span><ion-icon name="call-outline"></ion-icon>+4553700233</span>
         <ul>
             <li><a href="#"></a><ion-icon name="logo-linkedin"></ion-icon></li>
             <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
@@ -19,14 +19,14 @@
     </div>
 
     <nav>
-        <div class="logo"></div>
+        <a href="#"><div class="logo"></div></a>
             <img src="IMG\PB1.jpg" alt="logo">
         <div class="toggle"></div>
             <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
         <ul class="menu">
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="#">Forside</a></li>
+            <li><a href="#">Mit arbejde</a></li>
+            <li><a href="#">Om mig</a></li>
         </ul>
     </nav>
 
