--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-     <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width,
-     intital-scale1=1">
-     <title>Portfolio</title>
-     <link rel="stylesheet" href="style.css" type="text/css">
-     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width,
+        intital-scale1=1">
+            <title>Portfolio</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     </head>
     <body>
-    <div class="top bar">
+    <div class="top-bar">
         <span><ion-icon name="call-outline"></ion-icon>+4553700233</span>
         <ul>
             <li><a href="#"></a><ion-icon name="logo-linkedin"></ion-icon></li>
@@ -19,10 +19,12 @@
     </div>
 
     <nav>
-        <a href="#"><div class="logo"></div></a>
-            <img src="IMG\PB1.jpg" alt="logo">
-        <div class="toggle"></div>
+        <div class="logo">
+        <a href="#"><img src="IMG\PB1.jpg" alt="logo"> Logo</a>
+        </div>
+        <div class="toggle">
             <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
+        </div>
         <ul class="menu">
             <li><a href="#">Forside</a></li>
             <li><a href="#">Mit arbejde</a></li>
