--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="style.css" type="text/css">
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     </head>
+    
+    <!--Contact Nav-->
     <body>
     <div class="top-bar">
         <span><ion-icon name="call-outline"></ion-icon>+4553700233</span>
@@ -18,6 +20,7 @@
         </ul>
     </div>
 
+    <!--Main nav-->
     <nav>
         <div class="logo">
         <a href="#"><img src="IMG\PB1.jpg" alt="logo"> Logo</a>
