--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--Main nav-->
     <nav>
         <div class="logo">
-        <a href="#"><img src="IMG\PB1.jpg" alt="logo"> Logo</a>
+        <a href="#"><img src="IMG\PB1.jpg" alt="logo"></a>
         </div>
         <div class="toggle">
             <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
