--- a/forside.html
+++ b/forside.html
@@ -29,9 +29,9 @@
             <a href="#"><ion-icon name="menu-outline"></ion-icon></a>
         </div>
         <ul class="menu">
-            <li><a href="#">Forside</a></li>
-            <li><a href="#">Mit arbejde</a></li>
-            <li><a href="#">Om mig</a></li>
+            <li><a href="forside.html">Forside</a></li>
+            <li><a href="Mit arbejde.html">Mit arbejde</a></li>
+            <li><a href="Om mig.html">Om mig</a></li>
         </ul>
     </nav>
 
