--- a/forside.html
+++ b/forside.html
@@ -23,7 +23,7 @@
     <!--Main nav-->
     <nav>
         <div class="logo">
-        <a href="#"><img src="IMG\PB1.jpg" alt="logo"></a>
+        <a href="#"><img src="IMG\PB2.jpg" alt="logo"></a>
         </div>
         
         <ul class="menu">
@@ -33,6 +33,28 @@
         </ul>
     </nav>
 
+    <!--logof-->
+    <div class="logof">
+        <h1>Hej, jeg er<br>Frederik Knudsen</h1>
+        <img src="IMG\PB2.jpg" alt="profilbillede">
+    </div>
 
-    </body>    
+
+    
+    <!--flexbox billeder-->
+    <div class="container">
+        <ul>
+            <div class="text1">
+            <li><img class="box1" src="IMG\PB2.jpg" alt="1">text</li>
+            </div>
+            <li><img class="box2" src="IMG\PB2.jpg" alt="1">text</li>
+            <li><img class="box3" src="IMG\PB2.jpg" alt="1">text</li>
+            <li><img class="box4" src="IMG\PB2.jpg" alt="1">text</li>
+            <li><img class="box5" src="IMG\PB2.jpg" alt="1">text</li>
+            <li><img class="box6" src="IMG\PB2.jpg" alt="1">text</li>
+        </ul>
+    </div>
+
+    </body>
+
 </html>
