--- a/Om mig.html
+++ b/Om mig.html
@@ -23,7 +23,7 @@
     <!--Main nav-->
     <nav>
         <div class="logo">
-        <a href="#"><img src="IMG\PB1.jpg" alt="logo"></a>
+        <a href="forside.html"><img src="IMG\PB2.jpg" alt="logo"></a>
         </div>
         
         <ul class="menu">
@@ -33,6 +33,57 @@
         </ul>
     </nav>
 
+    <!--logof-->
+    <div class="logof">
+        <img src="IMG\PB2.jpg" alt="profilbillede">
+        <h2>Hej mit navn er Frederik Knudsen. <br>
+            Jeg er igang med, at uddanne mig som
+            multimediedesigner. Mit speciale er html & CSS samt fotografi og redigering. Men jeg kan også meget andet. Glæder mig til, at høre fra dig.</h2>
+        
+    </div>
+  
 
-    </body>    
+    <!--What can i do?-->
+    <main class="wcid">
+        <div class="wcidcontainer">
+
+          <div class="wciditem1">
+            <img src="#" alt="Foto">
+          </div>
+          <div class="wciditem2">
+            <h3>FOTOGRAFI OG REDIGERING</h3>
+            <p>
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            </p>
+          </div>
+
+          <div class="wciditem3">
+            <img src="#" alt="Webdesign">
+          </div>
+          <div class="wciditem4">
+            <h3>WEBDESIGN</h3>
+            <p>
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            </p>
+          </div>
+
+          <div class="wciditem5">
+            <img src="#" alt="HTMLCSS">
+          </div>
+          <div class="wciditem6">
+            <h3>HTML & CSS</h3>
+            <p>
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            </p>
+          </div>
+        </div>
+    </main>
+
+
 </html>
