--- a/Mit arbejde.html
+++ b/Mit arbejde.html
@@ -45,9 +45,9 @@
     <!--gallery-->
 
 <div class="main">
-        <div class="box1">
+        <div class="boxom1">
             
-                <div class="boxpic"><img class="pic" src="IMG\PB2.jpg" alt="1"></div>    
+                <div class="boxpic"><img class="picom" src="IMG\PB2.jpg" alt="1"></div>    
                 <div class="boxpictext1">
                     <h3>FOTOGRAFI OG REDIGERING</h3>
                     <p>
@@ -56,7 +56,7 @@
                     TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
                     </p>
                     </div>
-                <div class="boxtext"><img class="pic" src="IMG\PB2.jpg" alt="2"></div>
+                <div class="boxtext"><img class="picom" src="IMG\PB2.jpg" alt="2"></div>
                 <div class="boxpictext2">
                     <h3>FOTOGRAFI OG REDIGERING</h3>
                     <p>
@@ -66,7 +66,7 @@
                     </p>
                     </div>
 
-                <div class="boxtext"><img class="pic" src="IMG\PB2.jpg" alt="3"></div>
+                <div class="boxtext"><img class="picom" src="IMG\PB2.jpg" alt="3"></div>
                 <div class="boxpictext3">
                     <h3>FOTOGRAFI OG REDIGERING</h3>
                     <p>
@@ -77,9 +77,9 @@
                     </div>
         </div>
             
-            <div class="box2">
+            <div class="boxom2">
 
-                <div class="boxpic"><img class="pic" src="IMG\PB2.jpg" alt="4"></div>
+                <div class="boxpic"><img class="picom" src="IMG\PB2.jpg" alt="4"></div>
                 <div class="boxpictext4">
                     <h3>FOTOGRAFI OG REDIGERING</h3>
                     <p>
@@ -89,7 +89,7 @@
                     </p>
                     </div>
 
-                <div class="boxtext"><img class="pic" src="IMG\PB2.jpg" alt="5"></div>
+                <div class="boxtext"><img class="picom" src="IMG\PB2.jpg" alt="5"></div>
                 <div class="boxpictext5">
                     <h3>FOTOGRAFI OG REDIGERING</h3>
                     <p>
@@ -99,7 +99,7 @@
                     </p>
                     </div>
 
-                <div class="boxtext"><img class="pic" src="IMG\PB2.jpg" alt="6"></div>
+                <div class="boxtext"><img class="picom" src="IMG\PB2.jpg" alt="6"></div>
                 <div class="boxpictext6">
                     <h3>FOTOGRAFI OG REDIGERING</h3>
                     <p>
