--- a/Om mig.html
+++ b/Om mig.html
@@ -14,9 +14,9 @@
     <div class="top-bar">
         <span><ion-icon name="call-outline"></ion-icon>+4553700233</span>
         <ul>
-            <li><a href="#"></a><ion-icon name="logo-linkedin"></ion-icon></li>
-            <li><a href="#"></a><ion-icon name="logo-facebook"></ion-icon></li>
-            <li><a href="#"></a><ion-icon name="logo-instagram"></ion-icon></li>
+            <li><a href="https://www.linkedin.com/in/frederik-knudsen-1b119725b/"><ion-icon name="logo-linkedin"></ion-icon></li>
+            <li><a href="https://www.facebook.com/frederik.knudsen.7/"><ion-icon name="logo-facebook"></ion-icon></li>
+            <li><a href="https://www.instagram.com/frederik_knudsen22/"><ion-icon name="logo-instagram"></ion-icon></li>
         </ul>
     </div>
 
