--- a/forside.html
+++ b/forside.html
@@ -13,6 +13,7 @@
 <body>
 
     <div class="top-bar">
+        
         <span><ion-icon name="call-outline"></ion-icon>+4553700233</span>
         <ul>
             <li><a href="https://www.linkedin.com/in/frederik-knudsen-1b119725b/"><ion-icon name="logo-linkedin"></ion-icon></li>
@@ -46,7 +47,7 @@
     
     <div class="main">
         <div class="box1">
-            <div class="boxpic"><img class="pic" src="IMG\PB2.jpg" alt="1"></div>
+            <div class="boxpic"><img class="pic" src="IMG\Pen.jpg" alt="1"></div>
             <div class="boxtext"><img class="pic" src="IMG\PB2.jpg" alt="2"></div>
             <div class="boxtext"><img class="pic" src="IMG\PB2.jpg" alt="3"></div>
         </div>
