--- a/Om mig.html
+++ b/Om mig.html
@@ -37,8 +37,7 @@
     <div class="logof">
         <img src="IMG\PB2.jpg" alt="profilbillede">
         <h2>Hej mit navn er Frederik Knudsen. <br>
-            Jeg er igang med, at uddanne mig som
-            multimediedesigner. Mit speciale er html & CSS samt fotografi og redigering. Men jeg kan også meget andet. Glæder mig til, at høre fra dig.</h2>
+           Herunder kan du læse om nogle af ting jeg kan. Mit speciale er HTML & CSS samt fotografi, redigering og <br>webdesign dog kan jeg også meget andet og har et højt engagement for multimediedisgner branchen.</h2>
         
     </div>
   
