opdatering af beskrivelse

--- a/Mit arbejde.html
+++ b/Mit arbejde.html
@@ -67,7 +67,7 @@
                 <div class="boxpic4"><img class="picom" src="IMG\Sommer-faerdig-gif.gif" alt="4"></div>
             <div class="beskrivelse4">
                 <h3>ANIMATE OPGAVE</h3>
-                <p>TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT<br>
+                <p>Her brugte vi Adobe ANIMATE hvor jeg lavet motion tweens, shape tweens samt symboler<br>
                     
                 </p>    
             </div>
