Link til forside ved tryk på logo

--- a/Om mig.html
+++ b/Om mig.html
@@ -35,7 +35,7 @@
 
     <!--logof-->
     <div class="logof">
-        <img src="IMG\PB2.jpg" alt="profilbillede">
+      <a href="forside.html"><img src="IMG\PB2.jpg" alt="profilbillede"></a>
         <h2>Hej mit navn er Frederik Knudsen. <br>
            Herunder kan du læse om nogle af ting jeg kan. Mit speciale er HTML & CSS samt fotografi, redigering og <br>webdesign dog kan jeg også meget andet og har et højt engagement for multimediedisgner branchen.</h2>
         
