--- a/Mit arbejde.html
+++ b/Mit arbejde.html
@@ -64,6 +64,7 @@
                 <p>Her arbejdet jeg med Adobe XD<br>Hvor vi skabte en dating app<br>for hunde ejere.</p>    
             </div>
           
+                <div class="boxom2">
                 <div class="boxpic4"><img class="picom" src="IMG\Sommer-faerdig-gif.gif" alt="4"></div>
             <div class="beskrivelse4">
                 <h3>ANIMATE OPGAVE</h3>
@@ -77,7 +78,8 @@
                 <p>Her opsatte jeg selv lys og rekvisitter. Derefter<br>brugte jeg lightroom til at redigere.</p>  
             </div> 
                 <div class="boxtext6"><div class="sprite"></div>
-            <div class="beskrivelse6">
+                
+                <div class="beskrivelse6">
                 <h3>SPRITE</h3>
                 <p>Her havde jeg lavet en animation som<br>jeg efterfølgende kodet i HTML og CSS<br>på den måde spillet animationen i loop</p>
             </div>   
